--- a/src/views/hardware/edit.hbs
+++ b/src/views/hardware/edit.hbs
@@ -146,11 +146,7 @@
             <div class="input-group mb-3">
               <label class="input-group-text" for="propiedad">Propiedad de
                 Equipo</label>
-              <select
-                class="form-select"
-                id="propiedad"
-                name="propiedad"
-              >
+              <select class="form-select" id="propiedad" name="propiedad">
                 <option
                   value="{{hardware.propiedad}}"
                 >{{hardware.propiedad}}</option>
@@ -192,8 +188,3 @@
     </div>
   </div>
 </div>
-
-<style>
-  .form-group { margin-bottom: 10px; display: flex; justify-content: center;
-  align-items: center;}
-</style>
