adecuacion de la vista modulos con los modulos nuevos

--- a/src/views/modules/list.hbs
+++ b/src/views/modules/list.hbs
@@ -1,79 +1,132 @@
 <div class="container p-4">
   <div class="row">
 
-<div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="row row-cols-1 row-cols-md-2 g-4">
 
       <div class="col-md-3">
-<div class="card border-primary">
-        <div class="card text-center">
-          <div class="card-body">
-            <h2 class="card-title text-uppercase">
-              Gestion de Equipos
-            </h2>
-            <p class="card-text">
-              Aquí puedes gestionar los equipos de computo corporativos.
-            </p>
-            <p>(Laptops, Desktops, Servers)</p>
-            <a href="/hardware" class="btn btn-primary">Ir a la gestión de
-              equipos</a>
+        <div class="card border-primary">
+          <div class="card text-center">
+            <div class="card-body">
+              <h2 class="card-title text-uppercase">
+                Gestion de Equipos
+              </h2>
+              <p class="card-text">
+                Aquí puedes gestionar los equipos de computo corporativos.
+              </p>
+              <p>(Laptops, Desktops, Servers)</p>
+              <a href="/hardware" class="btn btn-primary">Ir a la gestión de
+                equipos</a>
+            </div>
           </div>
         </div>
       </div>
-      </div>
 
-<div class="col-md-3">
-<div class="card border-primary">
-        <div class="card text-center">
-          <div class="card-body">
+      <div class="col-md-3">
+        <div class="card border-primary">
+          <div class="card text-center">
+            <div class="card-body">
               <h2 class="card-title text-uppercase">
                 Gestion de Perifericos
               </h2>
-            <p class="card-text">
-              Aquí puedes gestionar los periféricos de la empresa.
-            </p>
-            <p>(Diademas, Mouse, Teclado, Base)</p>
-            <a href="/perifericos" class="btn btn-primary">Ir a la gestión de
-              periféricos</a>
+              <p class="card-text">
+                Aquí puedes gestionar los periféricos de la empresa.
+              </p>
+              <p>(Diademas, Mouse, Teclado, Base)</p>
+              <a href="/perifericos" class="btn btn-primary">Ir a la gestión de
+                periféricos</a>
+            </div>
           </div>
         </div>
       </div>
-      </div>
 
-<div class="col-md-3">
-<div class="card border-primary">
-        <div class="card text-center">
-          <div class="card-body">
+      <div class="col-md-3">
+        <div class="card border-primary">
+          <div class="card text-center">
+            <div class="card-body">
               <h2 class="card-title text-uppercase">
                 Gestion de Usuarios
               </h2>
-            <p class="card-text">
-              Aquí puedes gestionar el personal de la empresa que tiene equipos
-              asignados.
-            </p>
-            <a href="/people" class="btn btn-primary">Ir a la gestión de
-              usuarios</a>
+              <p class="card-text">
+                Aquí puedes gestionar el personal de la empresa que tiene
+                equipos asignados.
+              </p>
+              <a href="/people" class="btn btn-primary">Ir a la gestión de
+                usuarios</a>
+            </div>
           </div>
         </div>
       </div>
-      </div>
-      
-<div class="col-md-3">
-<div class="card border-primary">
-        <div class="card text-center">
-          <div class="card-body">
+
+      <div class="col-md-3">
+        <div class="card border-primary">
+          <div class="card text-center">
+            <div class="card-body">
               <h2 class="card-title text-uppercase">
                 Gestion de Otros Activos
               </h2>
-            <p class="card-text">
-              Aquí puedes gestionar otros activos de la empresa.
-            </p>
-            <a href="/activos" class="btn btn-primary">Ir a la gestión de
-              activos</a>
+              <p class="card-text">
+                Aquí puedes gestionar otros activos tecnologicos de la empresa.
+              </p>
+              <a href="/activos" class="btn btn-primary">Ir a la gestión de
+                activos</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card border-primary">
+          <div class="card text-center">
+            <div class="card-body">
+              <h2 class="card-title text-uppercase">
+                Gestion de Impresoras
+              </h2>
+              <p class="card-text">
+                Aquí puedes gestionar las Impresoras de la empresa.
+              </p>
+              <a href="/printers" class="btn btn-primary">Ir a la gestión de
+                Impresoras</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card border-primary">
+          <div class="card text-center">
+            <div class="card-body">
+              <h2 class="card-title text-uppercase">
+                Gestion de Movimientos
+              </h2>
+              <p class="card-text">
+                Aquí puedes gestionar movimientos y asignaciones de los activos
+                tecnologicos de la empresa.
+              </p>
+              <a href="/movimientos" class="btn btn-primary">Ir a la gestión de
+                movimientos</a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-3">
+        <div class="card border-primary">
+          <div class="card text-center">
+            <div class="card-body">
+              <h2 class="card-title text-uppercase">
+                Gestion de Informes
+              </h2>
+              <p class="card-text">
+                Aquí puedes gestionar los informes de todos los elementos
+                administrados por esta aplicacion.
+              </p>
+              <a href="/informes" class="btn btn-primary">Ir a la gestión de
+                informes</a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-      </div>
 
   </div>
 </div>
