--- a/src/views/people/list.hbs
+++ b/src/views/people/list.hbs
@@ -26,6 +26,7 @@
               </p>
               <p>USERNAME: {{usuario}}</p>
               <p>CARGO: {{cargo}}</p>
+              <p>LIDER: {{lider}}</p>
               <p>PROCESO: {{proceso}}</p>
               <p>CENTRO DE COSTO: {{centro_costo}}</p>
               <p></p>
