agregado el campo de lider en las secciones de add y edit en el modulo people

--- a/src/views/people/add.hbs
+++ b/src/views/people/add.hbs
@@ -45,6 +45,21 @@
               />
             <label for="floatingInput">Cargo</label>
             </div>
+
+            <div class="form-floating mb-3">
+              <select
+                class="form-select"
+                name="lider"
+                id="lider"
+                aria-label="lider"
+              >
+                {{#each lider}}
+                  <option value="{{nombreLider}}">{{nombreLider}}</option>
+                {{/each}}
+              </select>
+              <label for="floatingSelect">Lider</label>
+            </div>
+
             <div class="form-floating mb-3">
               <select
                 class="form-select"
