inicio de codificacion del modulo perifericos, hecho el modulo de lista y busqueda

--- a/src/views/modules/list.hbs
+++ b/src/views/modules/list.hbs
@@ -32,7 +32,7 @@
                 Aquí puedes gestionar los periféricos de la empresa.
               </p>
               <p>(Diademas, Mouse, Teclado, Base)</p>
-              <a href="/perifericos" class="btn btn-primary">Ir a la gestión de
+              <a href="/peripherals" class="btn btn-primary">Ir a la gestión de
                 periféricos</a>
             </div>
           </div>
