--- a/src/views/peripherals/list.hbs
+++ b/src/views/peripherals/list.hbs
@@ -24,6 +24,8 @@
                 IDENTIFICACION:{{id}} -/-
                 {{serial}}
               </p>
+              <p>MARCA: {{marca}}</p>
+              <p>MODELO: {{modelo}}</p>
               <p>ASIGNACION: {{assignation}}</p>
               <p>ESTADO: {{salud}}</p>
               <p></p>
