--- a/src/views/peripherals/add.hbs
+++ b/src/views/peripherals/add.hbs
@@ -3,34 +3,85 @@
     <div class="col-md-4 mx-auto">
       <div class="card">
         <div class="card-body">
-          <form action="/registros/add" method="post">
+          <form action="/peripherals/add" method="post">
             <div class="form-group">
               <input
                 type="text"
                 class="form-control"
-                name="title"
-                placeholder="title"
+                name="serial"
+                placeholder="Serial"
                 autofocus
               />
             </div>
+
             <div class="form-group">
               <input
-                type="url"
+                type="text"
                 class="form-control"
-                name="url"
-                placeholder="url"
+                name="marca"
+                placeholder="Marca"
               />
             </div>
+
             <div class="form-group">
-              <textarea
-                name="description"
-                rows="2"
+              <input
+                type="text"
                 class="form-control"
-                placeholder="description"
-              ></textarea>
+                name="modelo"
+                placeholder="Modelo"
+              />
             </div>
+            
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="type">Tipo de Periferico</label>
+              <select
+                class="form-select"
+                id="type"
+                name="type"
+              >
+                <option value="Diadema">Diadema</option>
+                <option value="Mouse">Mouse</option>
+                <option value="Teclado">Teclado</option>
+                <option value="Base">Base</option>
+                <option value="Bolso">Bolso</option>
+                <option value="Pantalla">Pantalla</option>
+              </select>
+            </div>
+            
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="salud">Estado del Dispositivo</label>
+              <select
+                class="form-select"
+                id="salud"
+                name="salud"
+              >
+                <option value="Nuevo">Nuevo</option>
+                <option value="Excelente">Excelente</option>
+                <option value="Bueno">Bueno</option>
+                <option value="Regular">Regular</option>
+                <option value="Malo">Malo</option>
+                <option value="Baja">Dado de Baja</option>
+              </select>
+            </div>
+
+            <div class="form-floating mb-3">
+              <select
+                class="form-select"
+                name="assignation"
+                id="assignation"
+                aria-label="assignation"
+              >
+                {{#each assignation}}
+                  <option
+                    value="{{nombre_empleado}}"
+                  >{{nombre_empleado}}</option>
+                {{/each}}
+              </select>
+              <label for="floatingSelect">Asignacion</label>
+            </div>
+
             <div class="form-group">
-                <button class="btn btn-success">Guardar</button>
+              <button class="btn btn-success">Guardar</button>
             </div>
           </form>
         </div>
