--- a/src/views/peripherals/edit.hbs
+++ b/src/views/peripherals/edit.hbs
@@ -3,36 +3,82 @@
     <div class="col-md-4 mx-auto">
       <div class="card">
         <div class="card-body">
-          <form action="/registros/edit/{{link.id}}" method="post">
+          <form action="/peripherals/edit/{{peripheral.id}}" method="post">
+
             <div class="form-group">
               <input
                 type="text"
-                value="{{link.title}}"
+                value="{{peripheral.serial}}"
                 class="form-control"
-                name="title"
-                placeholder="title"
+                name="serial"
+                placeholder="Serial"
                 autofocus
               />
             </div>
+
             <div class="form-group">
               <input
-                type="url"
-                value="{{link.url}}"
+                type="text"
+                value="{{peripheral.marca}}"
                 class="form-control"
-                name="url"
-                placeholder="url"
+                name="marca"
+                placeholder="Marca"
               />
             </div>
+
             <div class="form-group">
-              <textarea
-                name="description"
-                rows="2"
+              <input
+                type="text"
+                value="{{peripheral.modelo}}"
                 class="form-control"
-                placeholder="description"
-              >{{link.description}}</textarea>
+                name="modelo"
+                placeholder="Modelo"
+              />
+            </div>
+
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="type">Tipo de Periferico</label>
+              <select class="form-select" id="type" name="type">
+                <option value="{{peripheral.type}}">{{peripheral.type}}</option>
+                <option value="Diadema">Diadema</option>
+                <option value="Mouse">Mouse</option>
+                <option value="Teclado">Teclado</option>
+                <option value="Base">Base</option>
+                <option value="Bolso">Bolso</option>
+                <option value="Pantalla">Pantalla</option>
+              </select>
+            </div>
+
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="salud">Estado del Dispositivo</label>
+              <select class="form-select" id="salud" name="salud">
+                <option value="{{peripheral.salud}}">{{peripheral.salud}}</option>
+                <option value="Nuevo">Nuevo</option>
+                <option value="Excelente">Excelente</option>
+                <option value="Bueno">Bueno</option>
+                <option value="Regular">Regular</option>
+                <option value="Malo">Malo</option>
+                <option value="Baja">Dado de Baja</option>
+              </select>
+            </div>
+
+            <div class="form-floating mb-3">
+              <select
+                class="form-select"
+                name="assignation"
+                id="assignation"
+                aria-label="assignation"
+              >
+                {{#each assignation}}
+                  <option
+                    value="{{nombre_empleado}}"
+                  >{{nombre_empleado}}</option>
+                {{/each}}
+              </select>
+              <label for="floatingSelect">Asignacion</label>
             </div>
             <div class="form-group">
-                <button class="btn btn-success">save</button>
+              <button class="btn btn-success">save</button>
             </div>
           </form>
         </div>
