--- a/src/views/peripherals/search.hbs
+++ b/src/views/peripherals/search.hbs
@@ -1,20 +1,14 @@
 <div class="container p-4 text-center">
   <div class="row">
     <div class="container p-4">
-      <div class="row">
-        <div class="form-group-search">
-         {{!-- <a href="/peripherals/search" class="btn btn-primary btn-lg gap-2 col-10 mx-auto">Buscar Registro</a> --}}
-            <form action="/peripherals/search" method="POST">
+      <div class="form-group-search">
+        <form action="/peripherals/search" method="POST">
               <input type="text" class="form-control form-control-lg" id="busqueda" name="busqueda" placeholder="Introduce tu busqueda" />
               <button type="submit" class="btn btn-primary btn-lg gap-2 col-10 mx-auto">Buscar</button>
             </form>
-        </div>
-
-        <div class="form-group-newreg">
-          <a href="/peripherals/add" class="btn btn-success btn-lg gap-2 col-10 mx-auto">Nuevo Registro</a>
-        </div>
-
-        {{#each peripherals}}
+      </div>
+      <div class="row">
+       {{#each search}}
         <div class="col-md-3">
           <div class="card text-center">
             <div class="card-body">
@@ -22,7 +16,7 @@
                 {{type}}
               </h3>
               <p class="card-text">
-                IDENTIFICACION:{{id}} -/-
+                IDENTIFICACION: {{id}} -//-
                 {{serial}}
               </p>
               <p>MARCA: {{marca}}</p>
@@ -46,5 +40,4 @@
       </div>
     </div>
   </div>
-</div>
 </div>
