--- a/src/views/hardware/search.hbs
+++ b/src/views/hardware/search.hbs
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="container p-4">
       <div class="form-group-search">
-        <form action="/people/search" method="POST">
+        <form action="/hardware/search" method="POST">
           <input
             type="text"
             class="form-control form-control-lg"
