ensayos de dashboard

--- a/src/views/modules/list.hbs
+++ b/src/views/modules/list.hbs
@@ -120,7 +120,7 @@
                 Aquí puedes gestionar los informes de todos los elementos
                 administrados por esta aplicacion.
               </p>
-              <a href="/informes" class="btn btn-primary">Ir a la gestión de
+              <a href="/dashboard" class="btn btn-primary">Ir a la gestión de
                 informes</a>
             </div>
           </div>
