anexado el perfil de asignacion en hardware y primera tarjeta con datos desde la db en el dashboard

--- a/src/views/dashboard/index.hbs
+++ b/src/views/dashboard/index.hbs
@@ -11,9 +11,11 @@
                 <div class="numbers">
                   <p
                     class="text-sm mb-0 text-uppercase font-weight-bold"
-                  >Today's Money</p>
+                  >Gestion de Equipos Almacenados / Entregados</p>
                   <h5 class="font-weight-bolder">
-                    $53,000
+                    {{gequiposalm}}
+                    /
+                    {{gequiposent}}
                   </h5>
                   <p class="mb-0">
                     <span
