--- a/src/views/hardware/list.hbs
+++ b/src/views/hardware/list.hbs
@@ -17,10 +17,10 @@
         <div class="col-md-3">
           <div class="card text-center">
             <div class="card-body">
-              <h2 class="card-title text-uppercase">
+              <h3 class="card-title text-uppercase">
                 S/N:
                 {{serial}}
-              </h2>
+              </h3>
               <p class="card-text">
                 NOMBRE DE EQUIPO:
                 {{nombre_equipo}}
@@ -35,6 +35,7 @@
               <p>ALMACENAMIENTO:
                 {{tipo_almacenamiento}}
                 {{capacidad_almacenamiento}}GB</p>
+              <p>ASIGNACION: {{assignation}}</p>
               <p>PROPIEDAD: {{propiedad}}</p>
               <p>ESTADO DEL EQUIPO: {{salud}}</p>
               <p>ULTIMO MANTENIMIENTO:
