--- a/src/views/hardware/edit.hbs
+++ b/src/views/hardware/edit.hbs
@@ -143,6 +143,22 @@
               </select>
             </div>
 
+            <div class="form-floating mb-3">
+              <select
+                class="form-select"
+                name="assignation"
+                id="assignation"
+                aria-label="assignation"
+              >
+                {{#each assignation}}
+                  <option
+                    value="{{nombre_empleado}}"
+                  >{{nombre_empleado}}</option>
+                {{/each}}
+              </select>
+              <label for="floatingSelect">Asignacion</label>
+            </div>
+
             <div class="input-group mb-3">
               <label class="input-group-text" for="propiedad">Propiedad de
                 Equipo</label>
