--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -22,8 +22,7 @@
 
 
 {{!-- STYLES --}}
-<link rel="stylesheet" href="/css/styles.css">
-<link id="pagestyle" href="./assets/css/argon-dashboard.css?v=2.0.4" rel="stylesheet" />
+<link id="pagestyle" href="./assets/css/argon-dashboard.css" rel="stylesheet" />
 
 
   <!-- Nucleo Icons -->
