--- a/src/views/printers/search.hbs
+++ b/src/views/printers/search.hbs
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="container p-4">
       <div class="form-group-search">
-        <form action="/hardware/search" method="POST">
+        <form action="/printers/search" method="POST">
           <input
             type="text"
             class="form-control form-control-lg"
@@ -17,38 +17,27 @@
         </form>
       </div>
       <div class="row">
-        {{#each compu}}
+        {{#each printer}}
           <div class="col-md-3">
             <div class="card text-center">
               <div class="card-body">
-                <h3 class="card-title text-uppercase">
+                <h4 class="card-title text-uppercase">
                   S/N:
                   {{serial}}
-                </h3>
-                <p class="card-text">
-                  NOMBRE DE EQUIPO:
-                  {{nombre_equipo}}
-                </p>
-                <p>CATEGORIA DE EQUIPO: {{categoria}}</p>
-                <p>FABRICANTE: {{fabricante}}</p>
+                </h4>
+                <p>CATEGORIA DE EQUIPO: {{type}}</p>
+                <p>FABRICANTE: {{marca}}</p>
                 <p>MODELO: {{modelo}}</p>
-                <p>SISTEMA OPERATIVO: {{sistema_operativo}}</p>
-                <p>PROCESADOR: {{procesador}}</p>
-                <p>RAM: {{ram}}GB</p>
-                <p>ALMACENAMIENTO:
-                  {{tipo_almacenamiento}}
-                  {{capacidad_almacenamiento}}GB</p>
-                <p>ASIGNACION: {{assignation}}</p>
-                <p>PROPIEDAD: {{propiedad}}</p>
-                <p>ESTADO DEL EQUIPO: {{salud}}</p>
-                <p>ULTIMO MANTENIMIENTO:
-                  {{timeago fecha_ultimo_mantenimiento}}</p>
+                <p>UBICACION: {{ubicacion}}</p>
+                <p></p>
+                <p>PROPIEDAD: {{propiety}}</p>
+                <p>ESTADO DEL EQUIPO: {{estado}}</p>
                 <a
-                  href="/hardware/delete/{{serial}}"
+                  href="/printers/delete/{{serial}}"
                   class="btn btn-danger"
                 >Eliminar</a>
                 <a
-                  href="/hardware/edit/{{serial}}"
+                  href="/printers/edit/{{serial}}"
                   class="btn btn-secondary"
                 >Editar</a>
               </div>
@@ -58,7 +47,7 @@
           <div class="col-md-4 mx-auto">
             <div class="card card-body text-center">
               <p>No hay registros</p>
-              <a href="/people/add">Crear Uno</a>
+              <a href="/printers/add">Crear Uno</a>
             </div>
           </div>
         {{/each}}
