codeado el apartado delete y edit, finalizado el crud del modulo printers

--- a/src/views/printers/add.hbs
+++ b/src/views/printers/add.hbs
@@ -40,6 +40,7 @@
             <div class="form-group">
               <input
                 type="text"
+                id="modelo"
                 class="form-control"
                 name="Modelo"
                 placeholder="Modelo De Equipo"
@@ -50,10 +51,10 @@
               <label class="input-group-text" for="ubicacion">Ubicacion del
                 Equipo</label>
               <select class="form-select" id="ubicacion" name="ubicacion">
-                <option value="planta1">Planta Metalmecanica</option>
-                <option value="planta2">Planta Seki</option>
-                <option value="sofasa">Sofasa</option>
-                <option value="archivada">Archivada</option>
+                <option value="Planta Metalmecanica">Planta Metalmecanica</option>
+                <option value="Planta Seki">Planta Seki</option>
+                <option value="Sofasa">Sofasa</option>
+                <option value="Archivada">Archivada</option>
               </select>
             </div>
 
