--- a/src/views/printers/list.hbs
+++ b/src/views/printers/list.hbs
@@ -21,7 +21,7 @@
                 S/N:
                 {{serial}}
               </h4>
-              <p>CATEGORIA DE EQUIPO: {{type}}</p>
+              <p>CATEGORIA: {{type}}</p>
               <p>FABRICANTE: {{marca}}</p>
               <p>MODELO: {{modelo}}</p>
               <p>UBICACION: {{ubicacion}}</p>
@@ -41,6 +41,7 @@
           </div>
         </div>
         {{/each}}
+        
       </div>
     </div>
   </div>
